# learning-assistant

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/config/: db.py  settings.py
backend/controllers/: authController.py  documentController.py
backend/middleware/: auth.py  errorHandler.py
backend/models/: document.py  flashcard.py  quiz.py  user.py  userActivity.py
backend/routes/: authRoutes.py  dashboardRoutes.py  documentRoutes.py
backend/schemas/: auth.py  authSchemas.py  dashboard.py  document.py
backend/utils/: geminiService.py  pdfParser.py  textChunker.py
frontend/learning-assistant/: index.html  jsconfig.json  package-lock.json  package.json
frontend/learning-assistant/src/: App.jsx
frontend/learning-assistant/src/components/auth/: ProtectedRoute.jsx
frontend/learning-assistant/src/components/layout/: AppLayout.jsx
frontend/learning-assistant/src/context/: AuthContext.jsx  useAuth.js
frontend/learning-assistant/src/pages/Auth/: LoginPage.jsx  RegisterPage.jsx
frontend/learning-assistant/src/pages/Dashboard/: DashboardPage.jsx
frontend/learning-assistant/src/pages/Documents/: DocumentDetailPage.jsx  DocumentListPage.jsx
frontend/learning-assistant/src/services/: authService.js  dashboardService.js  documentService.js
frontend/learning-assistant/src/utils/: apiPaths.js  axiosInstance.js  getApiErrorMessage.js
