[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.0",
    "google-generativeai>=0.8.6",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.41.0",
]
